fixed layout bug in IE (hopefully), put more info in banner

--- a/public/stylesheets/gftl.css
+++ b/public/stylesheets/gftl.css
@@ -240,7 +240,7 @@ table#status td.tracked {
 
 #loginStatus {
 	font-family: sans-serif;
-	font-size: 10px;
+	font-size: 12px;
 	font-weight: normal;
 	font-variant: italic;
 	color: #ffffff;
